--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,4 @@
   <h1>Vijay</h1>
 </center>
 <hr>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor exercitationem, illo iste tenetur alias nisi voluptatem iusto harum, dignissimos expedita aliquid aliquam doloribus optio quo similique ut eveniet reprehenderit modi reiciendis dolore impedit. Id, beatae? Quisquam, debitis quis officiis culpa, dolorum ipsa, repellat harum asperiores id consequatur beatae praesentium eumgi</p>
